--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 									<div class='tile-thumbnail'>
 										<img class="thumbnail-image" src="images/site/ticketnetwork-thumbnail.png" alt="TicketNetwork" />
 										<div class="thumbnail-details">
-											<p class="thumbnail-title">TicketNetwork <span class="thumbnail-date">2020</span></p>
+											<p class="thumbnail-title"><span class="thumbnail-name">TicketNetwork</span><span class="thumbnail-date">2020</span></p>
 											<p class="thumbnail-type">Website</p>
 										</div>
 									</div>
@@ -97,7 +97,7 @@
 									<div class='tile-thumbnail'>
 										<img class="thumbnail-image" src="images/demo/ticketliquidator-demo-thumbnail.png" alt="Ticket Liquidator Demo" />
 										<div class="thumbnail-details">
-											<p class="thumbnail-title">Ticket Liquidator <span class="thumbnail-date">2019</span></p>
+											<p class="thumbnail-title"><span class="thumbnail-name">Ticket Liquidator</span><span class="thumbnail-date">2019</span></p>
 											<p class="thumbnail-type">Demo Site</p>
 										</div>
 									</div>
@@ -124,7 +124,7 @@
 									<div class='tile-thumbnail'>
 										<img class="thumbnail-image" src="images/demo/ticketmystery-demo-thumbnail.png" alt="TicketMystery Demo" />
 										<div class="thumbnail-details">
-											<p class="thumbnail-title">Ticket Mystery <span class="thumbnail-date">2019</span></p>
+											<p class="thumbnail-title"><span class="thumbnail-name">Ticket Mystery</span><span class="thumbnail-date">2019</span></p>
 											<p class="thumbnail-type">Demo Site</p>
 										</div>
 									</div>
@@ -150,7 +150,7 @@
 									<div class='tile-thumbnail'>
 										<img class="thumbnail-image" src="images/site/broadwaytoday-thumbnail.png" alt="Broadway Today" />
 										<div class="thumbnail-details">
-											<p class="thumbnail-title">BroadwayToday <span class="thumbnail-date">2019</span></p>
+											<p class="thumbnail-title"><span class="thumbnail-name">BroadwayToday</span><span class="thumbnail-date">2019</span></p>
 											<p class="thumbnail-type">Website</p>
 										</div>
 									</div>
@@ -179,7 +179,7 @@
 									<div class='tile-thumbnail'>
 										<img class="thumbnail-image" src="images/site/americanforcestravel-thumbnail.png" alt="American Forces Travel" />
 										<div class="thumbnail-details">
-											<p class="thumbnail-title">American Forces Travel <span class="thumbnail-date">2019</span></p>
+											<p class="thumbnail-title"><span class="thumbnail-name">American Forces Travel</span><span class="thumbnail-date">2019</span></p>
 											<p class="thumbnail-type">Website</p>
 										</div>
 									</div>
@@ -231,7 +231,7 @@
 									<div class='tile-thumbnail'>
 										<img class="thumbnail-image" src="images/site/megaseats-thumbnail.png" alt="MegaSeats" />
 										<div class="thumbnail-details">
-											<p class="thumbnail-title">MegaSeats <span class="thumbnail-date">2019</span></p>
+											<p class="thumbnail-title"><span class="thumbnail-name">MegaSeats</span><span class="thumbnail-date">2019</span></p>
 											<p class="thumbnail-type">Website</p>
 										</div>
 									</div>
@@ -263,7 +263,7 @@
 									<div class='tile-thumbnail'>
 										<img class="thumbnail-image" src="images/site/ticketscenter-thumbnail.png" alt="Tickets Center" />
 										<div class="thumbnail-details">
-											<p class="thumbnail-title">TicketsCenter <span class="thumbnail-date">2019</span></p>
+											<p class="thumbnail-title"><span class="thumbnail-name">TicketsCenter</span><span class="thumbnail-date">2019</span></p>
 											<p class="thumbnail-type">Website</p>
 										</div>
 									</div>
@@ -293,7 +293,7 @@
 									<div class='tile-thumbnail'>
 										<img class="thumbnail-image" src="images/site/ticketliquidator-thumbnail.png" alt="TicketLiquidator" />
 										<div class="thumbnail-details">
-											<p class="thumbnail-title">TicketLiquidator <span class="thumbnail-date">2018</span></p>
+											<p class="thumbnail-title"><span class="thumbnail-name">TicketLiquidator</span><span class="thumbnail-date">2018</span></p>
 											<p class="thumbnail-type">Website</p>
 										</div>
 									</div>
@@ -321,7 +321,7 @@
 									<div class='tile-thumbnail'>
 										<img class="thumbnail-image" src="images/site/zeromarkup-thumbnail.png" alt="ZeroMarkup" />
 										<div class="thumbnail-details">
-											<p class="thumbnail-title">ZeroMarkup <span class="thumbnail-date">2018</span></p>
+											<p class="thumbnail-title"><span class="thumbnail-name">ZeroMarkup</span><span class="thumbnail-date">2018</span></p>
 											<p class="thumbnail-type">Website</p>
 										</div>
 									</div>
@@ -355,7 +355,7 @@
 									<div class='tile-thumbnail'>
 										<img class="thumbnail-image" src="images/site/newyorktheatertickets-thumbnail.png" alt="NewYorkTheaterTickets" />
 										<div class="thumbnail-details">
-											<p class="thumbnail-title">NewYorkTheaterTickets <span class="thumbnail-date">2017</span></p>
+											<p class="thumbnail-title"><span class="thumbnail-name">NewYorkTheaterTickets</span><span class="thumbnail-date">2017</span></p>
 											<p class="thumbnail-type">Website</p>
 										</div>
 									</div>
@@ -387,7 +387,7 @@
 									<div class='tile-thumbnail'>
 										<img class="thumbnail-image" src="images/site/tickets-ezevent-thumbnail.png" alt="EzEvent Tickets" />
 										<div class="thumbnail-details">
-											<p class="thumbnail-title">EzEvent Tickets <span class="thumbnail-date">2017</span></p>
+											<p class="thumbnail-title"><span class="thumbnail-name">EzEvent Tickets</span><span class="thumbnail-date">2017</span></p>
 											<p class="thumbnail-type">Website</p>
 										</div>
 									</div>
@@ -413,7 +413,7 @@
 									<div class='tile-thumbnail'>
 										<img class="thumbnail-image" src="images/demo/wsj-demo-thumbnail.png" alt="Wall Street Journal Demo" />
 										<div class="thumbnail-details">
-											<p class="thumbnail-title">WSJ Tickets <span class="thumbnail-date">2017</span></p>
+											<p class="thumbnail-title"><span class="thumbnail-name">WSJ Tickets</span><span class="thumbnail-date">2017</span></p>
 											<p class="thumbnail-type">Demo Site</p>
 										</div>
 									</div>
@@ -445,7 +445,7 @@
 									<div class='tile-thumbnail'>
 										<img class="thumbnail-image" src="images/demo/opentable-demo-thumbnail.png" alt="OpenTable Demo" />
 										<div class="thumbnail-details">
-											<p class="thumbnail-title">OpenTable <span class="thumbnail-date">2017</span></p>
+											<p class="thumbnail-title"><span class="thumbnail-name">OpenTable</span><span class="thumbnail-date">2017</span></p>
 											<p class="thumbnail-type">Demo Site</p>
 										</div>
 									</div>
@@ -471,7 +471,7 @@
 									<div class='tile-thumbnail'>
 										<img class="thumbnail-image" src="images/demo/muzit-performer-demo-thumbnail.png" alt="Muzit Performer Demo" />
 										<div class="thumbnail-details">
-											<p class="thumbnail-title">Pet Sounds <span class="thumbnail-date">2017</span></p>
+											<p class="thumbnail-title"><span class="thumbnail-name">Pet Sounds</span><span class="thumbnail-date">2017</span></p>
 											<p class="thumbnail-type">Demo Site</p>
 										</div>
 									</div>
@@ -498,7 +498,7 @@
 									<div class='tile-thumbnail'>
 										<img class="thumbnail-image" src="images/site/thebloodywin-thumbnail.png" alt="The Bloody Win" />
 										<div class="thumbnail-details">
-											<p class="thumbnail-title">The BloodyWin <span class="thumbnail-date">2017</span></p>
+											<p class="thumbnail-title"><span class="thumbnail-name">The BloodyWin</span><span class="thumbnail-date">2017</span></p>
 											<p class="thumbnail-type">Website</p>
 										</div>
 									</div>
@@ -525,7 +525,7 @@
 									<div class='tile-thumbnail'>
 										<img class="thumbnail-image" src="images/demo/dod-demo-thumbnail.png" alt="Wall Street Journal Tickets" />
 										<div class="thumbnail-details">
-											<p class="thumbnail-title">DoD <span class="thumbnail-date">2017</span></p>
+											<p class="thumbnail-title"><span class="thumbnail-name">DoD</span><span class="thumbnail-date">2017</span></p>
 											<p class="thumbnail-type">Demo Site</p>
 										</div>
 									</div>
@@ -561,7 +561,7 @@
 									<div class='tile-thumbnail'>
 										<img class="thumbnail-image" src="images/site/onbroadway-thumbnail.png" alt="OnBroadway" />
 										<div class="thumbnail-details">
-											<p class="thumbnail-title">OnBroadway <span class="thumbnail-date">2016</span></p>
+											<p class="thumbnail-title"><span class="thumbnail-name">OnBroadway</span><span class="thumbnail-date">2016</span></p>
 											<p class="thumbnail-type">Website</p>
 										</div>
 									</div>
@@ -589,7 +589,7 @@
 									<div class='tile-thumbnail'>
 										<img class="thumbnail-image" src="images/site/corporate-ticketnetwork-thumbnail.png" alt="TicketNetwork Corporate Site" />
 										<div class="thumbnail-details">
-											<p class="thumbnail-title">Corporate TN <span class="thumbnail-date">2015</span></p>
+											<p class="thumbnail-title"><span class="thumbnail-name">Corporate TN</span><span class="thumbnail-date">2015</span></p>
 											<p class="thumbnail-type">Website</p>
 										</div>
 									</div>
@@ -619,7 +619,7 @@
 									<div class='tile-thumbnail'>
 										<img class="thumbnail-image" src="images/feature/results-widget-thumbnail.png" alt="Event Results Widget" />
 										<div class="thumbnail-details">
-											<p class="thumbnail-title">Event Results Widget <span class="thumbnail-date">2020</span></p>
+											<p class="thumbnail-title"><span class="thumbnail-name">Event Results Widget</span><span class="thumbnail-date">2020</span></p>
 											<p class="thumbnail-type">Widget Builder, Widget</p>
 										</div>
 									</div>
@@ -656,7 +656,7 @@
 									<div class='tile-thumbnail'>
 										<img class="thumbnail-image" src="images/feature/search-widget-thumbnail.png" alt="Search Widget" />
 										<div class="thumbnail-details">
-											<p class="thumbnail-title">Search Widget <span class="thumbnail-date">2020</span></p>
+											<p class="thumbnail-title"><span class="thumbnail-name">Search Widget</span><span class="thumbnail-date">2020</span></p>
 											<p class="thumbnail-type">Widget Builder, Widget</p>
 										</div>
 									</div>
@@ -689,7 +689,7 @@
 									<div class='tile-thumbnail'>
 										<img class="thumbnail-image" src="images/feature/venues-near-you-thumbnail.png" alt="Venues Near You" />
 										<div class="thumbnail-details">
-											<p class="thumbnail-title">Venues Near You <span class="thumbnail-date">2020</span></p>
+											<p class="thumbnail-title"><span class="thumbnail-name">Venues Near You</span><span class="thumbnail-date">2020</span></p>
 											<p class="thumbnail-type">Site Feature</p>
 										</div>
 									</div>
@@ -727,7 +727,7 @@
 									<div class='tile-thumbnail'>
 										<img class="thumbnail-image" src="images/feature/top-sellers-thumbnail.png" alt="Top Sellers Tool" />
 										<div class="thumbnail-details">
-											<p class="thumbnail-title">Top Sellers Tool <span class="thumbnail-date">2020</span></p>
+											<p class="thumbnail-title"><span class="thumbnail-name">Top Sellers Tool</span><span class="thumbnail-date">2020</span></p>
 											<p class="thumbnail-type">Site Feature</p>
 										</div>
 									</div>
@@ -767,7 +767,7 @@
 									<div class='tile-thumbnail'>
 										<img class="thumbnail-image" src="images/feature/enhanced-event-results-thumbnail.png" alt="Enhanced Event Results" />
 										<div class="thumbnail-details">
-											<p class="thumbnail-title">Enhanced Event Results <span class="thumbnail-date">2020</span></p>
+											<p class="thumbnail-title"><span class="thumbnail-name">Enhanced Event Results</span><span class="thumbnail-date">2020</span></p>
 											<p class="thumbnail-type">Site Feature</p>
 											
 										</div>
@@ -811,7 +811,7 @@
 									<div class='tile-thumbnail'>
 										<img class="thumbnail-image" src="images/feature/home-away-filters-thumbnail.png" alt="Home/Away Filters" />
 										<div class="thumbnail-details">
-											<p class="thumbnail-title">Home/Away Filters <span class="thumbnail-date">2019</span></p>
+											<p class="thumbnail-title"><span class="thumbnail-name">Home/Away Filters</span><span class="thumbnail-date">2019</span></p>
 											<p class="thumbnail-type">Site Feature</p>
 										</div>
 									</div>
@@ -847,7 +847,7 @@
 									<div class='tile-thumbnail'>
 										<img class="thumbnail-image" src="images/feature/results-with-filters-thumbnail.png" alt="Event Results with Filters" />
 										<div class="thumbnail-details">
-											<p class="thumbnail-title">Results with Filters <span class="thumbnail-date">2018</span></p>
+											<p class="thumbnail-title"><span class="thumbnail-name">Results with Filters</span><span class="thumbnail-date">2018</span></p>
 											<p class="thumbnail-type">Site Feature</p>
 										</div>
 									</div>
@@ -885,7 +885,7 @@
 									<div class='tile-thumbnail'>
 										<img class="thumbnail-image" src="images/feature/calendar-widget-thumbnail.png" alt="Calendar Widget" />
 										<div class="thumbnail-details">
-											<p class="thumbnail-title">Calendar Widget <span class="thumbnail-date">2017</span></p>
+											<p class="thumbnail-title"><span class="thumbnail-name">Calendar Widget</span><span class="thumbnail-date">2017</span></p>
 											<p class="thumbnail-type">Widget Builder, Widget</p>
 										</div>
 									</div>
@@ -912,7 +912,7 @@
 									<div class='tile-thumbnail'>
 										<img class="thumbnail-image" src="images/feature/card-results-with-images-thumbnail.png" alt="Card Results with Images" />
 										<div class="thumbnail-details">
-											<p class="thumbnail-title">Image Card Results <span class="thumbnail-date">2017</span></p>
+											<p class="thumbnail-title"><span class="thumbnail-name">Image Card Results</span><span class="thumbnail-date">2017</span></p>
 											<p class="thumbnail-type">Site Feature</p>
 										</div>
 									</div>
@@ -947,7 +947,7 @@
 									<div class='tile-thumbnail'>
 										<img class="thumbnail-image" src="images/feature/template-revamp-thumbnail.png" alt="Template Revamp" />
 										<div class="thumbnail-details">
-											<p class="thumbnail-title">Template Revamp <span class="thumbnail-date">2017</span></p>
+											<p class="thumbnail-title"><span class="thumbnail-name">Template Revamp</span><span class="thumbnail-date">2017</span></p>
 											<p class="thumbnail-type">Adjustable Template</p>
 										</div>
 									</div>
@@ -983,7 +983,7 @@
 									<div class='tile-thumbnail'>
 										<img class="thumbnail-image" src="images/feature/flip-cards-thumbnail.png" alt="Flip Cards" />
 										<div class="thumbnail-details">
-											<p class="thumbnail-title">Flip Cards <span class="thumbnail-date">2017</span></p>
+											<p class="thumbnail-title"><span class="thumbnail-name">Flip Cards</span><span class="thumbnail-date">2017</span></p>
 											<p class="thumbnail-type">Site Feature</p>
 										</div>
 									</div>
@@ -1010,7 +1010,7 @@
 									<div class='tile-thumbnail'>
 										<img class="thumbnail-image" src="images/feature/calendar-results-thumbnail.png" alt="Event Results Mapped to Calendar" />
 										<div class="thumbnail-details">
-											<p class="thumbnail-title">Calendar Results <span class="thumbnail-date">2017</span></p>
+											<p class="thumbnail-title"><span class="thumbnail-name">Calendar Results</span><span class="thumbnail-date">2017</span></p>
 											<p class="thumbnail-type">Site Feature</p>
 										</div>
 									</div>
