--- a/index.html
+++ b/index.html
@@ -617,7 +617,7 @@
 								<!-- API EVENT RESULTS, FEATURE, 2020-->
 								<li id="api-event-results" tabindex="1" class="tile inactive" data-type='feature' data-year='2020'>
 									<div class='tile-thumbnail'>
-										<img class="thumbnail-image" src="images/feature/results-widget-thumbnail.png" alt="Event Results Widget" />
+										<img loading="lazy" class="thumbnail-image" src="images/feature/results-widget-thumbnail.png" alt="Event Results Widget" />
 										<div class="thumbnail-details">
 											<p class="thumbnail-title"><span class="thumbnail-name">Event Results Widget</span><span class="thumbnail-date">2020</span></p>
 											<p class="thumbnail-type">Widget Builder, Widget</p>
@@ -654,7 +654,7 @@
 								<!-- SEARCH WIDGET, FEATURE, 2020-->
 								<li id="api-search-widget" tabindex="1" class="tile inactive" data-type='feature' data-year='2020'>
 									<div class='tile-thumbnail'>
-										<img class="thumbnail-image" src="images/feature/search-widget-thumbnail.png" alt="Search Widget" />
+										<img loading="lazy" class="thumbnail-image" src="images/feature/search-widget-thumbnail.png" alt="Search Widget" />
 										<div class="thumbnail-details">
 											<p class="thumbnail-title"><span class="thumbnail-name">Search Widget</span><span class="thumbnail-date">2020</span></p>
 											<p class="thumbnail-type">Widget Builder, Widget</p>
@@ -687,7 +687,7 @@
 								<!-- VENUES NEAR YOU, FEATURE, 2020 -->
 								<li id="venues-near-you" tabindex="1" class="tile inactive" data-type='feature' data-year='2020'>
 									<div class='tile-thumbnail'>
-										<img class="thumbnail-image" src="images/feature/venues-near-you-thumbnail.png" alt="Venues Near You" />
+										<img loading="lazy" class="thumbnail-image" src="images/feature/venues-near-you-thumbnail.png" alt="Venues Near You" />
 										<div class="thumbnail-details">
 											<p class="thumbnail-title"><span class="thumbnail-name">Venues Near You</span><span class="thumbnail-date">2020</span></p>
 											<p class="thumbnail-type">Site Feature</p>
@@ -725,7 +725,7 @@
 								<!-- TOP SELLERS, FEATURE, 2020 -->
 								<li id="top-sellers-tool" tabindex="1" class="tile inactive" data-type='feature' data-year='2020'>
 									<div class='tile-thumbnail'>
-										<img class="thumbnail-image" src="images/feature/top-sellers-thumbnail.png" alt="Top Sellers Tool" />
+										<img loading="lazy" class="thumbnail-image" src="images/feature/top-sellers-thumbnail.png" alt="Top Sellers Tool" />
 										<div class="thumbnail-details">
 											<p class="thumbnail-title"><span class="thumbnail-name">Top Sellers Tool</span><span class="thumbnail-date">2020</span></p>
 											<p class="thumbnail-type">Site Feature</p>
@@ -765,7 +765,7 @@
 								<!-- ENHANCED EVENT RESULTS, FEATURE, 2020 -->
 								<li id="results-with-filters" tabindex="1" class="tile inactive" data-type='feature' data-year='2020'>
 									<div class='tile-thumbnail'>
-										<img class="thumbnail-image" src="images/feature/enhanced-event-results-thumbnail.png" alt="Enhanced Event Results" />
+										<img loading="lazy" class="thumbnail-image" src="images/feature/enhanced-event-results-thumbnail.png" alt="Enhanced Event Results" />
 										<div class="thumbnail-details">
 											<p class="thumbnail-title"><span class="thumbnail-name">Enhanced Event Results</span><span class="thumbnail-date">2020</span></p>
 											<p class="thumbnail-type">Site Feature</p>
@@ -809,7 +809,7 @@
 								<!-- HOME/AWAY, FEATURE, 2019 -->
 								<li id="home-away-filters" tabindex="1" class="tile inactive" data-type='feature' data-year='2019'>
 									<div class='tile-thumbnail'>
-										<img class="thumbnail-image" src="images/feature/home-away-filters-thumbnail.png" alt="Home/Away Filters" />
+										<img loading="lazy" class="thumbnail-image" src="images/feature/home-away-filters-thumbnail.png" alt="Home/Away Filters" />
 										<div class="thumbnail-details">
 											<p class="thumbnail-title"><span class="thumbnail-name">Home/Away Filters</span><span class="thumbnail-date">2019</span></p>
 											<p class="thumbnail-type">Site Feature</p>
@@ -845,7 +845,7 @@
 								<!-- RESULTS WITH FILTERS, FEATURE, 2018 -->
 								<li tabindex="1" class="tile inactive" data-type='feature' data-year='2018'>
 									<div class='tile-thumbnail'>
-										<img class="thumbnail-image" src="images/feature/results-with-filters-thumbnail.png" alt="Event Results with Filters" />
+										<img loading="lazy" class="thumbnail-image" src="images/feature/results-with-filters-thumbnail.png" alt="Event Results with Filters" />
 										<div class="thumbnail-details">
 											<p class="thumbnail-title"><span class="thumbnail-name">Results with Filters</span><span class="thumbnail-date">2018</span></p>
 											<p class="thumbnail-type">Site Feature</p>
@@ -883,7 +883,7 @@
 								<!-- Calendar Widget, FEATURE, 2017-->
 								<li id="calendar-widget" tabindex="1" class="tile inactive" data-type='feature' data-year='2017'>
 									<div class='tile-thumbnail'>
-										<img class="thumbnail-image" src="images/feature/calendar-widget-thumbnail.png" alt="Calendar Widget" />
+										<img loading="lazy" class="thumbnail-image" src="images/feature/calendar-widget-thumbnail.png" alt="Calendar Widget" />
 										<div class="thumbnail-details">
 											<p class="thumbnail-title"><span class="thumbnail-name">Calendar Widget</span><span class="thumbnail-date">2017</span></p>
 											<p class="thumbnail-type">Widget Builder, Widget</p>
@@ -910,7 +910,7 @@
 								<!-- CARD RESULTS WITH IMAGES, FEATURE, 2017 -->
 								<li tabindex="1" class="tile inactive" data-type='feature' data-year='2017'>
 									<div class='tile-thumbnail'>
-										<img class="thumbnail-image" src="images/feature/card-results-with-images-thumbnail.png" alt="Card Results with Images" />
+										<img loading="lazy" class="thumbnail-image" src="images/feature/card-results-with-images-thumbnail.png" alt="Card Results with Images" />
 										<div class="thumbnail-details">
 											<p class="thumbnail-title"><span class="thumbnail-name">Image Card Results</span><span class="thumbnail-date">2017</span></p>
 											<p class="thumbnail-type">Site Feature</p>
@@ -945,7 +945,7 @@
 							<!-- Template Revamp, FEATURE, 2017-->
 								<li id="template-revamp" tabindex="1" class="tile inactive" data-type='feature' data-year='2017'>
 									<div class='tile-thumbnail'>
-										<img class="thumbnail-image" src="images/feature/template-revamp-thumbnail.png" alt="Template Revamp" />
+										<img loading="lazy" class="thumbnail-image" src="images/feature/template-revamp-thumbnail.png" alt="Template Revamp" />
 										<div class="thumbnail-details">
 											<p class="thumbnail-title"><span class="thumbnail-name">Template Revamp</span><span class="thumbnail-date">2017</span></p>
 											<p class="thumbnail-type">Adjustable Template</p>
@@ -981,7 +981,7 @@
 								<!-- FLIP CARDS, FEATURE, 2017-->
 								<li id="flip-cards" tabindex="1" class="tile inactive" data-type='feature' data-year='2017'>
 									<div class='tile-thumbnail'>
-										<img class="thumbnail-image" src="images/feature/flip-cards-thumbnail.png" alt="Flip Cards" />
+										<img loading="lazy" class="thumbnail-image" src="images/feature/flip-cards-thumbnail.png" alt="Flip Cards" />
 										<div class="thumbnail-details">
 											<p class="thumbnail-title"><span class="thumbnail-name">Flip Cards</span><span class="thumbnail-date">2017</span></p>
 											<p class="thumbnail-type">Site Feature</p>
@@ -1008,7 +1008,7 @@
 								<!-- CALENDAR RESULTS, FEATURE, 2017--> 
 								<li tabindex="1" class="tile inactive" data-type='feature' data-year='2017'>
 									<div class='tile-thumbnail'>
-										<img class="thumbnail-image" src="images/feature/calendar-results-thumbnail.png" alt="Event Results Mapped to Calendar" />
+										<img loading="lazy" class="thumbnail-image" src="images/feature/calendar-results-thumbnail.png" alt="Event Results Mapped to Calendar" />
 										<div class="thumbnail-details">
 											<p class="thumbnail-title"><span class="thumbnail-name">Calendar Results</span><span class="thumbnail-date">2017</span></p>
 											<p class="thumbnail-type">Site Feature</p>
