--- a/index.html
+++ b/index.html
@@ -37,14 +37,15 @@
             <div class="section-container">
                 <main class="content-section">			
 					<section id="tile-grid-container">
-						<h1 class="main-heading">Digital Portfolio</h1>
-						<div id='tile-grid-header'>
-							<a data-target="website-grid" href='#' class="grid-tab active-tab"><h2 class="content-heading">Websites</h2></a>
-							<span class='grid-tab-separator'>|</span>
-							<a data-target="feature-grid" href='#' class="grid-tab"><h2 class="content-heading">Features</h2></a>
-							<div id='sliding-box'></div>
+						<div id='tile-grid-heading'>
+							<h1 class="main-heading">Digital Portfolio</h1>
+							<div id='tile-grid-tabs'>
+								<a data-target="website-grid" href='#' class="grid-tab active-tab"><h2 class="content-heading">Websites</h2></a>
+								<span class='grid-tab-separator'>|</span>
+								<a data-target="feature-grid" href='#' class="grid-tab"><h2 class="content-heading">Features</h2></a>
+								<div id='sliding-box'></div>
+							</div>
 						</div>
-						
 						<div id='tile-grid'>
 							<ul id='website-grid' class="tile-container active-grid">
 								<!-- 2020 -->
