--- a/index.html
+++ b/index.html
@@ -35,17 +35,16 @@
 		
         <div id="main-content" class="section-wrapper">
             <div class="section-container">
-                <main class="content-section">			
+                <main class="content-section">
+					<h1 class="main-heading">Digital Portfolio</h1>
 					<section id="tile-grid-container">
-						<div id='tile-grid-heading'>
-							<h1 class="main-heading">Digital Portfolio</h1>
-							<div id='tile-grid-tabs'>
-								<a data-target="website-grid" href='#' class="grid-tab active-tab"><h2 class="content-heading">Websites</h2></a>
-								<span class='grid-tab-separator'>|</span>
-								<a data-target="feature-grid" href='#' class="grid-tab"><h2 class="content-heading">Features</h2></a>
-								<div id='sliding-box'></div>
-							</div>
+						<div id='tile-grid-header'>
+							<a data-target="website-grid" href='#' class="grid-tab active-tab"><h2 class="content-heading">Websites</h2></a>
+							<span class='grid-tab-separator'>|</span>
+							<a data-target="feature-grid" href='#' class="grid-tab"><h2 class="content-heading">Features</h2></a>
+							<div id='sliding-box'></div>
 						</div>
+						
 						<div id='tile-grid'>
 							<ul id='website-grid' class="tile-container active-grid">
 								<!-- 2020 -->
