--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 				<div class="section-container">
 					<section class="h-card content-section">
 						<div class="card-photo">
-							<img class="u-photo" src="images/steven-willets.png" alt="Steven Willets" />
+							<img class="u-photo" src="images/steven-willets.jpg" alt="Steven Willets" />
 						</div>
 						<div class="card-info">
 							<h2 class="name p-name">Steven Willets</h2>
