--- a/dev.html
+++ b/dev.html
@@ -30,35 +30,37 @@
 							<h3 class="position p-job-title">Front-End Developer</h3>
 							<a class='resume' href="/steven-willets-resume.pdf">Resum&eacute;</a>
 						</div>
-						<ul class='contact-info'>
-							<li class="contact-item">
-								<span class="p-adr"> 
-									<i class="fas fa-map-marker-alt"></i>
-									<span class="p-street-address">289 Parmelee Hill Rd</span>
-									<span class="p-locality">Durham</span>
-									<span class="p-region">CT</span> 
-									<span class="p-postal-code">06422</span>
-								</span>
-							</li>
-							<li class="contact-item">
-								<a class="contact-link u-email" href="mailto:stevenawillets@gmail.com">
-									<i class="fas fa-envelope"></i>
-									<span>stevenawillets@gmail.com</span>
-								</a>
-							</li>
-							<li class="contact-item">
-								<a class="contact-link p-tel" href="tel:+12038236645">
-									<i class="fas fa-phone"></i>
-									<span>(203) 823-6645</span>
-								</a>
-							</li>
-							<li class="contact-item">
-								<a class="contact-link" href="https://www.linkedin.com/in/steven-willets-a726785b/">
-									<i class="fas fa-linkedin"></i>
-									<span>LinkedIn</span>
-								</a>
-							</li>
-						</ul>
+						<div id='contact-info-container'>
+							<ul class='contact-info'>
+								<li class="contact-item">
+									<span class="p-adr"> 
+										<i class="fas fa-map-marker-alt"></i>
+										<span style="display:none;" class="p-street-address">289 Parmelee Hill Rd</span>
+										<span class="p-locality">Durham</span>
+										<span class="p-region">CT</span> 
+										<span class="p-postal-code">06422</span>
+									</span>
+								</li>
+								<li class="contact-item">
+									<a class="contact-link u-email" href="mailto:stevenawillets@gmail.com">
+										<i class="fas fa-envelope"></i>
+										<span>stevenawillets@gmail.com</span>
+									</a>
+								</li>
+								<li class="contact-item">
+									<a class="contact-link p-tel" href="tel:+12038236645">
+										<i class="fas fa-phone"></i>
+										<span>(203) 823-6645</span>
+									</a>
+								</li>
+								<li class="contact-item">
+									<a class="contact-link" href="https://www.linkedin.com/in/steven-willets-a726785b/">
+										<i class="fab fa-linkedin-in"></i>
+										<span>LinkedIn</span>
+									</a>
+								</li>
+							</ul>
+						</div>
 					</section>
 				</div>
 			</div>
