--- a/dev.html
+++ b/dev.html
@@ -23,7 +23,7 @@
 				<div class="section-container">
 					<section class="h-card content-section">
 						<div class="card-photo">
-							<img class="u-photo" src="images/steven-willets.jpg" alt="Steven Willets" />
+							<img style="display:block;" class="u-photo" src="images/steven-willets.jpg" alt="Steven Willets" />
 						</div>
 						<div class="card-info">
 							<h2 class="name p-name">Steven Willets</h2>
