--- a/dev.html
+++ b/dev.html
@@ -28,7 +28,7 @@
 						<div class="card-info">
 							<h2 class="name p-name">Steven Willets</h2>
 							<h3 class="position p-job-title">Front-End Developer</h3>
-							<a class='resume' href="/steven-willets-resume.pdf">Resum&eacute;</a>
+							<a class='resume' href="/steven_willets_resume.pdf">R&eacute;sum&eacute;</a>
 						</div>
 						<div id='contact-info-container'>
 							<ul class='contact-info'>
