--- a/index.html
+++ b/index.html
@@ -1074,6 +1074,21 @@
 			<a id="next-slide" class="move-slide" href="next" data-direction="next"><i class="fa fa-angle-right"></i></a>
 		</div>
     </div>
-    <script src="scripts/portfolio-main.js"></script>
+	<script src="scripts/portfolio-main.js"></script>
+	<!--
+		
+		<a class="" href="https://codepen.io/steven-willets">
+			<i class="fab fa-codepen"></i>
+		</a>
+		
+		<a class="" href="https://www.linkedin.com/in/steven-willets-a726785b/">
+			<i class="fab fa-linkedin"></i>
+		</a>
+		
+		<a class="" href="https://github.com/steven-willets">
+			<i class="fab fa-github"></i>
+		</a>
+
+	-->
 </body>
 </html>
